#1 Adds custom logo theme support, logo, title, description, normalize

--- a/src/styles/style.styl
+++ b/src/styles/style.styl
@@ -5,3 +5,7 @@ Description: A minimalist WordPress theme designed for the Gutenberg Editor 🎨
 Author: Oz Ramos <heyozramos@gmail.com>
 Author URI: https://ozramos.com
 */
+
+@import 'variables'
+@import 'grid'
+@import 'header'
