--- a/src/styles/header.styl
+++ b/src/styles/header.styl
@@ -1,6 +1,10 @@
 #header-main
   height $headerHeight
 
+  .site-branding
+    display inline-block
+    width 300px
+    
   .site-logo
     float left
     margin-right $push
@@ -14,3 +18,12 @@
 
   .site-title
     font-size 1em
+    margin-top 0
+
+.menu-main-container
+  float right
+
+  li
+    float left
+    margin-right $push
+    list-style none
