--- a/src/styles/header.styl
+++ b/src/styles/header.styl
@@ -3,11 +3,12 @@
 
   .site-branding
     display inline-block
+    vertical-align middle
     width 300px
     
   .site-logo
     float left
-    margin-right $push
+    margin-right $pushMd
     img
       height $headerHeight
       width auto
@@ -17,13 +18,43 @@
     display inline-block
 
   .site-title
-    font-size 1em
+    font-size 1.25em
+    font-weight 900
     margin-top 0
+    margin-bottom 0
+    
+    a
+      color $colorText
 
+// Menu
 .menu-main-container
+  margin-left 0
+  padding-left 0
+  vertical-align middle
   float right
 
+  ul
+    display inline-block
+    vertical-align middle
+  
   li
     float left
-    margin-right $push
+    margin 0 $push
     list-style none
+    
+    &:first-child
+      margin-left 0
+    &:last-child
+      margin-right 0
+
+    &.current-menu-item
+      a
+        color $colorText
+        font-weight 900
+    
+// Hide description on front page
+.home #header-main
+  .site-title
+    margin-top 1.25em
+  .site-description
+    display none
