#1 Renames template, styles responsive menu (but does not open)

--- a/src/styles/variables.styl
+++ b/src/styles/variables.styl
@@ -1,7 +1,12 @@
-$colorText = #4b4b75
+$colorText = #263238
+$colorLink = #2196F3
+$colorLinkFocus = #f44336
+$colorBg = #fff
 
 $push = 10px
 $pushMd = 20px
+$pad = 10px
+$padMd = 20px
 
 $headerHeight = 80px
 
