--- a/src/styles/core.styl
+++ b/src/styles/core.styl
@@ -1,6 +1,16 @@
+*
+  box-sizing border-box
+
 html
   font-family 'Roboto', sans-serif
   color $colorText
 
 a
   text-decoration none
+  color $colorLink
+
+  &:active
+    color $colorLinkFocus
+
+  &:hover
+    color darken($colorLink, 15%)
