--- a/src/styles/header.styl
+++ b/src/styles/header.styl
@@ -20,8 +20,6 @@
     flex-direction column
     justify-content space-around
 
-    // @media screen and (max-width: 800px)
-    
   .site-title
     font-size 1.25em
     margin 0
@@ -39,6 +37,26 @@
     ul
       display flex
       list-style none
-
     li
       margin 0 $pushMd
+
+    // Responsive
+    @media screen and (max-width: 800px)
+      display block
+      position fixed
+      width 300px
+      padding $padMd
+      padding-top 60px
+      top 0
+      right 0
+      height 100%
+      background $colorBg
+      box-shadow 1px 1px 3px rgba(0,0,0,0.25)
+
+      ul
+        display block
+        padding-left 0
+
+      li
+        padding $pad
+        border-bottom 1px solid rgba(0,0,0,0.15)
